# Kronos_Thai_Retail

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements.txt  run_pipeline.py  verify_data_layer.py  verify_dr.py  verify_fixes.py  verify_kaggle_runtime.py  verify_model_layer.py
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: SETUP_GUIDE.md  backtest-methodology.html  backtest-methodology.md  dashboard-user-manual.md  getting-started.md  kaggle-setup.md  monthly-walkthrough.html  monthly-walkthrough.md  morning-paper-trading-guide.md  operations-manual.html  operations-manual.md  user-manual.html  user-manual.md
google_suite/: README.md  SETUP_GUIDE.md  build_notebook.py  kronos_daily_pipeline.ipynb  migrate_to_sheets.py  preview.py
kaggle/: build_kaggle_notebook.py  kronos_backtest_rerun.ipynb  kronos_kaggle_pipeline.ipynb
kth_dr/: __init__.py  discover_drs.py  loader_dr.py  trade_gen_dr.py  universe_dr.py
notebooks/: 01_data_layer.ipynb  04_finetune_per_market.ipynb  05_decision_report.ipynb
scripts/: backfill_forecast.py  build_allocation_report.py  build_backtest_html.py  build_decision_notebook.py  build_deep_dive.py  build_jan_walkthrough.py  build_master_report.py  build_n50_summary.py  build_n50_yearly_report.py  build_oos_report.py  build_operations_html.py  build_risk_dashboard.py  build_usermanual_html.py  build_walkthrough_html.py  build_ytd_journal.py  build_ytd_journal_realistic.py  check_data_sanity.py  compare_finetune.py  (+23 more)
(+174 files in other folders)
